// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@primer/react should not update exports without a semver change 1`] = `
[
  "ActionBar",
  "type ActionBarProps",
  "ActionList",
  "type ActionListDescriptionProps",
  "type ActionListDividerProps",
  "type ActionListGroupProps",
  "type ActionListItemProps",
  "type ActionListLeadingVisualProps",
  "type ActionListLinkItemProps",
  "type ActionListProps",
  "type ActionListTrailingVisualProps",
  "ActionMenu",
  "type ActionMenuAnchorProps",
  "type ActionMenuButtonProps",
  "type ActionMenuProps",
  "AnchoredOverlay",
  "type AnchoredOverlayProps",
  "Autocomplete",
  "type AutocompleteInputProps",
  "type AutocompleteMenuProps",
  "type AutocompleteOverlayProps",
  "Avatar",
  "AvatarPair",
  "type AvatarPairProps",
  "type AvatarProps",
  "AvatarStack",
  "type AvatarStackProps",
  "AvatarToken",
  "BaseStyles",
  "type BaseStylesProps",
  "Box",
  "type BoxProps",
  "BranchName",
  "type BranchNameProps",
  "Breadcrumb",
  "type BreadcrumbItemProps",
  "type BreadcrumbProps",
  "Breadcrumbs",
  "type BreadcrumbsItemProps",
  "type BreadcrumbsProps",
  "Button",
  "ButtonGroup",
  "type ButtonGroupProps",
  "type ButtonProps",
  "Caret",
  "type CaretProps",
  "Checkbox",
  "CheckboxGroup",
  "type CheckboxProps",
  "CircleBadge",
  "type CircleBadgeIconProps",
  "type CircleBadgeProps",
  "CircleOcticon",
  "type CircleOcticonProps",
  "ConfirmationDialog",
  "type ConfirmationDialogProps",
  "CounterLabel",
  "type CounterLabelProps",
  "createComponent",
  "Details",
  "type DetailsProps",
  "Dialog",
  "type DialogHeaderProps",
  "type DialogProps",
  "Flash",
  "type FlashProps",
  "type FocusTrapHookSettings",
  "type FocusZoneHookSettings",
  "FormControl",
  "Header",
  "type HeaderItemProps",
  "type HeaderLinkProps",
  "type HeaderProps",
  "Heading",
  "type HeadingProps",
  "IconButton",
  "type IconButtonProps",
  "IssueLabelToken",
  "Label",
  "LabelGroup",
  "type LabelGroupProps",
  "type LabelProps",
  "Link",
  "LinkButton",
  "type LinkProps",
  "merge",
  "NavList",
  "type NavListDividerProps",
  "type NavListGroupProps",
  "type NavListItemProps",
  "type NavListLeadingVisualProps",
  "type NavListProps",
  "type NavListSubNavProps",
  "type NavListTrailingVisualProps",
  "Octicon",
  "type OcticonProps",
  "Overlay",
  "type OverlayProps",
  "Pagehead",
  "PageHeader",
  "type PageHeaderProps",
  "type PageheadProps",
  "PageLayout",
  "type PageLayoutContentProps",
  "type PageLayoutFooterProps",
  "type PageLayoutHeaderProps",
  "type PageLayoutPaneProps",
  "type PageLayoutProps",
  "Pagination",
  "type PaginationProps",
  "PointerBox",
  "type PointerBoxProps",
  "Popover",
  "type PopoverContentProps",
  "type PopoverProps",
  "Portal",
  "type PortalProps",
  "ProgressBar",
  "type ProgressBarProps",
  "Radio",
  "RadioGroup",
  "type RadioProps",
  "registerPortalRoot",
  "RelativeTime",
  "type RelativeTimeProps",
  "SegmentedControl",
  "Select",
  "SelectPanel",
  "type SelectPanelProps",
  "type SelectProps",
  "SideNav",
  "type SideNavLinkProps",
  "type SideNavProps",
  "Spinner",
  "type SpinnerProps",
  "SplitPageLayout",
  "type SplitPageLayoutContentProps",
  "type SplitPageLayoutFooterProps",
  "type SplitPageLayoutHeaderProps",
  "type SplitPageLayoutPaneProps",
  "type SplitPageLayoutProps",
  "Stack",
  "type StackItemProps",
  "type StackProps",
  "StateLabel",
  "type StateLabelProps",
  "SubNav",
  "type SubNavLinkProps",
  "type SubNavLinksProps",
  "type SubNavProps",
  "sx",
  "type SxProp",
  "TabNav",
  "type TabNavLinkProps",
  "type TabNavProps",
  "Text",
  "Textarea",
  "type TextareaProps",
  "TextInput",
  "type TextInputProps",
  "TextInputWithTokens",
  "type TextInputWithTokensProps",
  "type TextProps",
  "theme",
  "themeGet",
  "ThemeProvider",
  "type ThemeProviderProps",
  "Timeline",
  "type TimelineBadgeProps",
  "type TimelineBodyProps",
  "type TimelineBreakProps",
  "type TimelineItemsProps",
  "type TimelineProps",
  "ToggleSwitch",
  "Token",
  "type TokenProps",
  "Tooltip",
  "type TooltipProps",
  "type TouchOrMouseEvent",
  "TreeView",
  "type TreeViewErrorDialogProps",
  "type TreeViewItemProps",
  "type TreeViewProps",
  "type TreeViewSubTreeProps",
  "type TreeViewVisualProps",
  "Truncate",
  "type TruncateProps",
  "UnderlineNav",
  "type UnderlineNavItemProps",
  "type UnderlineNavProps",
  "useColorSchemeVar",
  "useConfirm",
  "useDetails",
  "useFocusTrap",
  "useFocusZone",
  "useFormControlForwardedProps",
  "useOnEscapePress",
  "useOnOutsideClick",
  "useOpenAndCloseFocus",
  "useOverlay",
  "useRefObjectAsForwardedRef",
  "useResizeObserver",
  "useResponsiveValue",
  "useSafeTimeout",
  "useTheme",
]
`;

exports[`@primer/react/deprecated should not update exports without a semver change 1`] = `
[
  "ActionList",
  "type ActionListProps",
  "ActionMenu",
  "type ActionMenuProps",
  "Button",
  "ButtonClose",
  "type ButtonCloseProps",
  "ButtonDanger",
  "type ButtonDangerProps",
  "ButtonInvisible",
  "type ButtonInvisibleProps",
  "ButtonOutline",
  "type ButtonOutlineProps",
  "ButtonPrimary",
  "type ButtonPrimaryProps",
  "type ButtonProps",
  "ButtonTableList",
  "type ButtonTableListProps",
  "Dialog",
  "type DialogHeaderProps",
  "type DialogProps",
  "FilteredSearch",
  "type FilteredSearchProps",
  "FilterList",
  "type FilterListItemProps",
  "type FilterListProps",
  "Octicon",
  "type OcticonProps",
  "Pagehead",
  "type PageheadProps",
  "TabNav",
  "type TabNavLinkProps",
  "type TabNavProps",
  "Tooltip",
  "type TooltipProps",
  "UnderlineNav",
  "type UnderlineNavLinkProps",
  "type UnderlineNavProps",
]
`;

exports[`@primer/react/drafts should not update exports without a semver change 1`] = `
[
  "ActionBar",
  "type ActionBarProps",
  "Announce",
  "type AnnounceProps",
  "AriaAlert",
  "type AriaAlertProps",
  "AriaStatus",
  "type AriaStatusProps",
  "Banner",
  "type BannerProps",
  "Blankslate",
  "type BlankslateProps",
  "callbackCancelledResult",
  "type CallbackCancelledResult",
  "type ChildrenPropTypes",
  "type Column",
  "type ComboboxCommitEvent",
  "createColumnHelper",
  "DataTable",
  "type DataTableProps",
  "default",
  "default",
  "default",
  "Dialog",
  "type DialogButtonProps",
  "type DialogHeaderProps",
  "type DialogHeight",
  "type DialogProps",
  "type DialogWidth",
  "type Emoji",
  "type FileType",
  "type FileUploadResult",
  "Hidden",
  "type HiddenProps",
  "InlineAutocomplete",
  "type InlineAutocompleteProps",
  "InlineMessage",
  "type InlineMessageProps",
  "type InteractiveMarkdownViewerProps",
  "MarkdownEditor",
  "type MarkdownEditorHandle",
  "type MarkdownEditorProps",
  "MarkdownViewer",
  "type MarkdownViewerProps",
  "type Mentionable",
  "type NavigationProps",
  "NavList",
  "type NavListDividerProps",
  "type NavListGroupProps",
  "type NavListItemProps",
  "type NavListLeadingVisualProps",
  "type NavListProps",
  "type NavListSubNavProps",
  "type NavListTrailingVisualProps",
  "PageHeader",
  "type PageHeaderProps",
  "type ParentLinkProps",
  "type Reference",
  "type SavedReply",
  "ScrollableRegion",
  "type ScrollableRegionProps",
  "SelectPanel",
  "type SelectPanelMessageProps",
  "type SelectPanelProps",
  "type SelectPanelSecondaryActionProps",
  "type ShowSuggestionsEvent",
  "SkeletonAvatar",
  "SkeletonBox",
  "SkeletonText",
  "type SlotConfig",
  "Stack",
  "type StackItemProps",
  "type StackProps",
  "type Suggestion",
  "type Suggestions",
  "type SyntheticChangeEmitter",
  "Table",
  "type TableActionsProps",
  "type TableBodyProps",
  "type TableCellProps",
  "type TableContainerProps",
  "type TableHeaderProps",
  "type TableHeadProps",
  "type TableProps",
  "type TableRowProps",
  "type TableSubtitleProps",
  "type TableTitleProps",
  "TabPanels",
  "type TabPanelsPanelProps",
  "type TabPanelsProps",
  "type TabPanelsTabProps",
  "type TitleProps",
  "Tooltip",
  "TooltipContext",
  "type TooltipDirection",
  "type TooltipProps",
  "type Trigger",
  "type TriggerPropsType",
  "UnderlinePanels",
  "type UnderlinePanelsPanelProps",
  "type UnderlinePanelsProps",
  "type UnderlinePanelsTabProps",
  "useCombobox",
  "useDynamicTextareaHeight",
  "useIgnoreKeyboardActionsWhileComposing",
  "useOverflow",
  "useSafeAsyncCallback",
  "useSlots",
  "useSyntheticChange",
]
`;

exports[`@primer/react/experimental should not update exports without a semver change 1`] = `
[
  "ActionBar",
  "type ActionBarProps",
  "Announce",
  "type AnnounceProps",
  "AriaAlert",
  "type AriaAlertProps",
  "AriaStatus",
  "type AriaStatusProps",
  "Banner",
  "type BannerProps",
  "Blankslate",
  "type BlankslateProps",
  "callbackCancelledResult",
  "type CallbackCancelledResult",
  "type ChildrenPropTypes",
  "type Column",
  "type ComboboxCommitEvent",
  "createColumnHelper",
  "DataTable",
  "type DataTableProps",
  "default",
  "default",
  "default",
  "Dialog",
  "type DialogButtonProps",
  "type DialogHeaderProps",
  "type DialogHeight",
  "type DialogProps",
  "type DialogWidth",
  "type Emoji",
  "FeatureFlags",
  "type FeatureFlagsProps",
  "type FileType",
  "type FileUploadResult",
  "FilteredActionList",
  "type FilteredActionListProps",
  "Hidden",
  "type HiddenProps",
  "InlineAutocomplete",
  "type InlineAutocompleteProps",
  "InlineMessage",
  "type InlineMessageProps",
  "type InteractiveMarkdownViewerProps",
  "MarkdownEditor",
  "type MarkdownEditorHandle",
  "type MarkdownEditorProps",
  "MarkdownViewer",
  "type MarkdownViewerProps",
  "type Mentionable",
  "type NavigationProps",
  "NavList",
  "type NavListDividerProps",
  "type NavListGroupProps",
  "type NavListItemProps",
  "type NavListLeadingVisualProps",
  "type NavListProps",
  "type NavListSubNavProps",
  "type NavListTrailingVisualProps",
  "PageHeader",
  "type PageHeaderProps",
  "type ParentLinkProps",
  "type Reference",
  "type SavedReply",
  "ScrollableRegion",
  "type ScrollableRegionProps",
  "SelectPanel",
  "type SelectPanelMessageProps",
  "type SelectPanelProps",
  "type SelectPanelSecondaryActionProps",
  "type ShowSuggestionsEvent",
  "SkeletonAvatar",
  "SkeletonBox",
  "SkeletonText",
  "type SlotConfig",
  "Stack",
  "type StackItemProps",
  "type StackProps",
  "type Suggestion",
  "type Suggestions",
  "type SyntheticChangeEmitter",
  "Table",
  "type TableActionsProps",
  "type TableBodyProps",
  "type TableCellProps",
  "type TableContainerProps",
  "type TableHeaderProps",
  "type TableHeadProps",
  "type TableProps",
  "type TableRowProps",
  "type TableSubtitleProps",
  "type TableTitleProps",
  "TabPanels",
  "type TabPanelsPanelProps",
  "type TabPanelsProps",
  "type TabPanelsTabProps",
  "type TitleProps",
  "Tooltip",
  "TooltipContext",
  "type TooltipDirection",
  "type TooltipProps",
  "type Trigger",
  "type TriggerPropsType",
  "UnderlinePanels",
  "type UnderlinePanelsPanelProps",
  "type UnderlinePanelsProps",
  "type UnderlinePanelsTabProps",
  "useCombobox",
  "useDynamicTextareaHeight",
  "useIgnoreKeyboardActionsWhileComposing",
  "useOverflow",
  "useSafeAsyncCallback",
  "useSlots",
  "useSyntheticChange",
]
`;
